# WawaBus

./: .env  .env-deployment  .gitignore  .gitlab-ci.yml  README.md  docker-compose-deployment.yml  docker-compose.yml  docker-stack.yml
api/: Dockerfile  crud.py  pyproject.toml
api/app/: crud.py  main.py  models.py  scheduler.py
api/app/api/: main.py
api/app/core/: config.py  db.py  email.py  initial_data.py  location_retriever.py  security.py
api/app/tests/: conftest.py  utilities.py
api/scripts/: tests.sh
data_retrieval/: Dockerfile  pyproject.toml
data_retrieval/data_retrieval/: config.py  data_downloader.py  main.py
data_retrieval/data_retrieval/api_connector/: connect.py
data_retrieval/data_retrieval/database_connector/: db.py  remove_old_data.py
data_retrieval/data_retrieval/tests/: test_init.py
data_retrieval/scripts/: tests.sh
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: types.ts  utils.ts
frontend/src/api-calls/: auth.ts  location.ts  notification.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: busMarker.tsx  copyright.tsx  loginForm.tsx  map.tsx  mapContainer.tsx  navBar.tsx  notificationCard.tsx  notificationForm.tsx  registerForm.tsx  searchBar.tsx
frontend/src/hooks/: useAuth.ts
grafana/config/: grafana.ini
grafana/prometheus/: prometheus.yml
grafana/provisioning/dashboards/: App-Details.json  dashboard-provisioning.yaml
scripts/: gitlab-build-and-push.sh  gitlab-push-to-prod.sh  gitlab-test-api.sh  gitlab-test-data-retrieval.sh  test-api.sh
(+20 files in other folders)
