[project]
name = "data-retrieval"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "sqlmodel<1.0.0,>=0.0.21",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.4",
    "pymongo>=4.10.1",
    "requests>=2.32.3",
]


[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "ruff<1.0.0,>=0.2.2",
    "coverage<8.0.0,>=7.4.3",
]
